# FullStack

./: README.md  docker-compose.yml  package-lock.json  start_app.sh  stop_app.sh
backend/: .conda-auto-env  .gitignore  README.md  activate.sh  app.py  data_types.py  environment.yml  pyproject.toml  requirements.txt  run.py  test.ipynb
backend/Data/: Adjusted_Ad_Campaign_Performance_Data.csv  Banking_KPI_Data.csv  arima.ipynb  users.csv
backend/app/: __init__.py  config.py  data_types.py
backend/app/database/: connection.py  schema.py
backend/app/models/: campaign.py  data_types.py  prophet_prediction.py  user.py
backend/app/routes/: data_routes.py  user_routes.py
backend/app/services/: __init__.py  campaign_service.py  prophet_service.py  user_service.py
backend/app/utils/: data_processing.py  logging_config.py
backend/data/: time_converter.ipynb
backend/data_storage/: csv_splitter.ipynb  final_mock_data_1.csv  final_mock_data_2.csv  final_mock_data_3.csv
backend/notebooks/: arima.ipynb  prophet.ipynb
backend/tests/: prophet.ipynb  test_data_routes.py  test_user_routes.py
frontend/: .env  Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.js  ClickCounter.js  DbStructure.js  middleware.ts
frontend/src/api/: backendApi.ts  dbApi.ts  llmApi.ts
frontend/src/app/: area-chart.tsx  bar-chart.tsx  error.tsx  global-error.tsx  layout.tsx  line-chart.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/components/: AdminPage.tsx  CollectionTable.js  CsvUploader.js  MongoExplorer.js  ReportBuilder.tsx  SearchBar.tsx  StaffCard.tsx  StaffList.tsx  UploadButton.tsx  ad-spend-table.tsx  admin-create-user-modal.tsx  admin-page.tsx  admin-search-bar.tsx  admin-staff-list.tsx  age-group-bar-chart.tsx  app-sidebar.tsx  card-database-editor.tsx  card-database-uploader-editor.tsx  card-database-uploader.tsx  card-metrics-predicted-revenue.tsx  card-metrics-predicted-roi.tsx  card-metrics-revenue.tsx  card-metrics-roi.tsx  card-ml-trigger.tsx  channel-bar-chart.tsx  chart-channel-contribution.tsx  chart-cost-metrics-heatmap.tsx  chart-filter-revenue-adspend.tsx  chart-ml-predictions.tsx  charts-adspend-revenue-agegroup.tsx  charts-adspend-revenue-channels.tsx  charts-adspend-revenue-countries.tsx  dashboard-layout.tsx  dashboard.tsx  date-range-picker.tsx  filter-bar.tsx  kpi-cards.tsx  login-form.tsx  metrics-revenue-card.tsx  metrics-roi-card.tsx  (+6 more)
frontend/src/context/: database-operations-context.tsx  prophet-predictions-context.tsx
frontend/src/hooks/: index.ts  use-backend-api.ts  use-llm-api.ts
frontend/src/styles/: globals.css
frontend/src/types/: adCampaignTypes.ts  types.ts
llm-backend/: .gitignore  README.md  app.py  chart_data_generator.py  chart_generator.py  config.py  description_generator.py  environment.yml  install_ollama_models.sh  json_processor.py  json_selector.py  pipeline.py  pyproject.toml  query_classifier.py  report_generator.py  requirements.txt
llm-backend/data/: cleaned_Adjusted_Ad_Campaign_Performance_Data.json  cleaned_Banking_KPI_Data.json
llm-backend/database/: connection.py  schema.py
llm-backend/examples/: chart_generator.json  collection_processor.json  description_generator.json  generate_analysis_queries.json
llm-backend/llm-models/: query_classifier.modelfile  report_generator.modelfile
llm-backend/models/: chart_data_generator.modelfile  description_generator.modelfile  json_processor.modelfile  json_selector.modelfile
llm-backend/mypackage/: __init__.py
llm-backend/mypackage/a_query_processor/: __init__.py  query_classifier.py  query_validator.py
llm-backend/mypackage/b_data_processor/: __init__.py  collection_processor.py  collection_selector.py  json_processor.py  json_selector.py  table_processor.py  table_selector.py
llm-backend/mypackage/c_regular_generator/: __init__.py  chart_data_generator.py  chart_generator.py  description_generator.py
llm-backend/mypackage/d_report_generator/: __init__.py  generate_analysis_queries.py  report_generator.py  truncated_pipeline.py
llm-backend/mypackage/utils/: __init__.py  database.py  llm_config.py  logging_config.py  schema.py
llm-backend/others/: data_cleaner.py
llm-backend/test/: chartgeneration.ipynb  descriptiongenerator.ipynb  llm.ipynb
llm-backend/tests/a_query_processor/: test_query_classifier.py  test_query_validator.py
llm-backend/tests/b_data_processor/: test_collection_processor.py  test_collection_selector.py  test_json_processor.py  test_json_selector.py
llm-backend/tests/c_regular_generator/: test_chart_data_generator.py  test_description_generator.py
llm-backend/tests/d_report_generator/: test_generate_analysis_queries.py  test_report_generator.py  test_truncated_pipeline.py
minio-init/: setup.sh
mongodb-init/: init-mongo.js
nginx/: nginx.conf
tests/: loadtest.js
(+44 files in other folders)
