[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RecceLab LLM Backend"
version = "0.1.0"
description = "A data analysis and reporting tool"
readme = "README.md"
authors = [
    {name = "Javian Ng", email = "javian.ng.z.h@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "asttokens>=3.0.0",
    "black>=25.1.0",
    "blinker>=1.9.0",
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "click>=8.1.8",
    "decorator>=5.2.1",
    "dnspython>=2.7.0",
    "executing>=2.2.0",
    "Flask>=3.1.0",
    "flask-cors>=5.0.1",
    "h11>=0.14.0",
    "httpcore>=1.0.7",
    "httpx>=0.28.1",
    "idna>=3.10",
    "iniconfig>=2.1.0",
    "ipython>=9.0.2",
    "ipython-pygments-lexers>=1.1.1",
    "itsdangerous>=2.2.0",
    "jedi>=0.19.2",
    "Jinja2>=3.1.6",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "langchain-core>=0.3.49",
    "langchain-ollama>=0.3.0",
    "langsmith>=0.3.19",
    "MarkupSafe>=3.0.2",
    "matplotlib-inline>=0.1.7",
    "mypy-extensions>=1.0.0",
    "numpy>=2.2.4",
    "ollama>=0.4.7",
    "orjson>=3.10.16",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "parso>=0.8.4",
    "pathspec>=0.12.1",
    "pexpect>=4.9.0",
    "platformdirs>=4.3.7",
    "pluggy>=1.5.0",
    "prompt-toolkit>=3.0.50",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pydantic>=2.11.0",
    "pydantic-core>=2.33.0",
    "Pygments>=2.19.1",
    "pymongo>=4.11.3",
    "pytest>=8.3.5",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "PyYAML>=6.0.2",
    "requests>=2.32.3",
    "requests-toolbelt>=1.0.0",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "stack-data>=0.6.3",
    "tenacity>=9.0.0",
    "tokenize-rt>=6.1.0",
    "traitlets>=5.14.3",
    "typing-extensions>=4.13.0",
    "typing-inspection>=0.4.0",
    "tzdata>=2025.2",
    "urllib3>=2.3.0",
    "wcwidth>=0.2.13",
    "Werkzeug>=3.1.3",
    "zstandard>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
    "black>=25.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "jupyterlab>=4.3.0",
    "ipykernel>=6.29.0",
    "notebook>=7.3.0",
]

[project.urls]
"Homepage" = "https://github.com/RecceLabTechies/FullStack"
"Bug Tracker" = "https://github.com/RecceLabTechies/FullStack/issues"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"